Replace calls to getFirst()